# RoboAICore

./: .gitmodules  CMakeLists.txt  README.md
Tests/: grads_test.cpp  tensor_test.cpp
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
ext/glad/src/: gl.c
src/: Conc.c  Conc.h  Conv2d.c  Conv2d.cu  Conv2d.h  Dense.c  Dense.cu  Dense.h  Input.c  Input.cu  Input.h  Interfaces.h  Losses.c  Losses.cu  Losses.h  MSE.c  MSE.cu  MSE.h  MaxPool2d.c  MaxPool2d.cu  MaxPool2d.h  Model.c  Model.cu  Model.h  Net.c  Net.cu  Net.h  Optimizer.c  Optimizer.cu  Optimizer.h  Regression.c  Regression.h  Relu.c  Relu.cu  Relu.h  Sequential.c  Sequential.h  Softmax.c  Softmax.h  TCommon.c  (+28 more)
src/RL/: ACBrain.c  ACBrain.h  DDPG.c  DDPG.h  Deque.c  Deque.h  RLAgent.c  RLAgent.h  RLBrain.c  RLBrain.h  ReplayBuffer.c  ReplayBuffer.h  SimpleDeque.c  SimpleDeque.h  TD3.c  TD3.h  ValueDeque.c  ValueDeque.h
src/TMath/: TCommon.c  TCommon.h  TQuaternion.c  TQuaternion.h  TVec3.c  TVec3.h  TVec4.c  TVec4.h  TWeightsInit.c  TWeightsInit.h
src/cmd/: cuda_test.cu  data_test.cpp  model_test.cpp  mult_opt_test.cpp  opt_test.cpp  rand_test.cpp
src/cmd/cartpole/: agent.h  cart.h  cartpole.cpp  shapes.h
src/cmd/cartpole_cont/: agent.h  cart.h  cartpole.cpp  shapes.h
src/cmd/cartpole_td3/: agent.h  cartpole.cpp
src/cmd/particles/: agent.h  particles.cpp  shape.h
src/cmd/qmaze/: agent.h  cell.h  grid.h  qmaze.cpp  quad.h
src/geometry/: TArc.c  TArc.h  TQuaternion.c  TQuaternion.h  TRay.c  TRay.h  TVec2.c  TVec2.h  TVec3.c  TVec3.h  TVec4.c  TVec4.h
